convert to henry and add 30mad

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Brandon Skrtich - Resumé</title>
+        <title>Henry Skrtich - Resumé</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
@@ -13,7 +13,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Jura:400,500,600" rel="stylesheet" type="text/css">
 
-        <link rel="icon" type="image/png" href="bs-icon.png">
+        <link rel="icon" type="image/png" href="bear-head.png">
 
         <style>
             body {
@@ -354,15 +354,15 @@
         <main>
             <section id="section1" class="titlefont">
                 <div id="section1a">
-                    <div id="developer_name">BRANDON<br>SKRTICH</div>
+                    <div id="developer_name">HENRY<br>SKRTICH</div>
                     <div id="developer_title">DEVOPS ENGINEER</div>
                 </div>
                 <div id="section1b" style="position:relative">
                     <div>
-                        720<i class="fa fa-circle" style="font-size: 4px;"></i>362<i class="fa fa-circle" style="font-size: 4px;"></i>0848
+                        +1 720<i class="fa fa-circle" style="font-size: 4px;"></i>362<i class="fa fa-circle" style="font-size: 4px;"></i>0848
                     </div>
                     <div style="top: calc(60% - 30px);">
-                        bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>pm.me
+                        hskrtich<i class="fa fa-at" style="font-size: 22px;"></i>pm.me
                     </div>
                     <div style="bottom: 0;">
                         Remote - Oregon, USA
@@ -374,11 +374,27 @@
                 <div class="section_description">
                     <div class="job">
                         <div class="left">
+                            <div class="job_company">ThirtyMadison</div>
+                            <div class="job_title">Sr. Site Reliability Engineer</div>
+                        </div>
+                        <div class="right">
+                            <div class="title">Aug, 2021 - Current</div>
+                            <div class="loc">Remote</div>
+                        </div>
+                        <div class="clear desc">
+                            Revamped infrastructure as code using Terraform, Atlantis, & github.
+                            Managed over 20 in house terraform modules and 6000+ aws resources
+                            across 20 accounts while configuring security first architecture.
+                            The resident terraform guru.
+                        </div>
+                    </div>
+                    <div class="job">
+                        <div class="left">
                             <div class="job_company">ADT</div>
                             <div class="job_title">Site Reliability Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Oct, 2020 - Current</div>
+                            <div class="title">Oct, 2020 - Aug, 2021</div>
                             <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
@@ -467,6 +483,7 @@
                         </div>
                     </div>
                     <div class="job_padding"></div>
+                    <!--
                     <div class="job">
                         <div class="left">
                             <div class="job_company">BieMedia</div>
@@ -483,7 +500,6 @@
                         </div>
                     </div>
                     <div class="job_padding"></div>
-                    <!--
                     <div class="job">
                         <div class="left">
                             <div class="job_company">Retriever Software</div>
@@ -505,31 +521,31 @@
             <section id="section3">
                 <div class="section_title titlefont">Skills</div>
                 <div class="section_description" style="text-align-last: justify;">
-                    <span class="font3">Docker</span>
+                    <span class="font3">Terraform</span>
                     <span class="font2">AWS</span>
                     <span class="font2">API</span>
-                    <span class="font3">PHP</span>
-                    <span class="font2">Terraform</span>
-                    <span class="font1">Kanban</span>
                     <span class="font2">GCP</span>
+                    <span class="font2">EC2</span>
+                    <span class="font2">Docker</span>
+                    <span class="font1">Kanban</span>
                     <span class="font3">Ansible</span>
                     <span class="font1">Apache</span>
                     <span class="font1">PostgreSQL</span>
                     <span class="font3">Agile</span>
-                    <span class="font2">SQL</span>
+                    <span class="font2">Python 3</span>
                     <span class="font3">HTML</span>
                     <span class="font1">Git</span>
                     <span class="font3">MySQL</span>
                     <span class="font1">Scrum</span>
                     <span class="font3">LAMP</span>
-                    <span class="font2">EC2</span>
-                    <span class="font3">Oracle</span>
+                    <span class="font1">Oracle</span>
                     <span class="font2">Jenkins</span>
+                    <span class="font3">PHP</span>
                     <span class="font1">Linux</span>
                     <span class="font3">Github</span>
                     <span class="font2">Shell Script</span>
                     <span class="font3">RDS</span>
-                    <span class="font2">Python3</span>
+                    <span class="font2">SQL</span>
                     <span class="font3">REST</span>
                 </div>
             </section>
@@ -568,12 +584,11 @@
             </section>
             -->
             <footer>
-                <div>linkedin.com/in/bskrtich</div>
-                <div>brandon.skrtich.com</div>
-                <div>github.com/bskrtich</div>
+                <div>linkedin.com/in/hskrtich</div>
+                <div>hskrtich.skrtich.com</div>
+                <div>github.com/hskrtich</div>
             </footer>
         </main>
-
 
         <div class="tab" style="top: 20px;">
             <a id="print" href="">
@@ -581,12 +596,12 @@
             </a>
         </div>
         <div class="tab" style="top: 55px;">
-            <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/bskrtich">
+            <a id="linkedin" target="_blank" href="https://www.linkedin.com/in/hskrtich">
                 <i title="Linkedin" class="tooltip fa fa-linkedin-square fa-fw"></i>
             </a>
         </div>
         <div class="tab" style="top: 90px;">
-            <a id="github" target="_blank" href="https://github.com/bskrtich">
+            <a id="github" target="_blank" href="https://github.com/hskrtich">
                 <i title="GitHub" class="tooltip fa fa-github-square fa-fw"></i>
             </a>
         </div>
