--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             section {
                 /*padding-bottom: 6px;*/
-                margin-bottom: 15px;
+                margin-bottom: 5px;
                 clear: both;
                 width: 100%;
                 display: inline-block;
@@ -142,13 +142,13 @@
             }
 
             #section1a {
-                width: 50%;
+                width: 55%;
                 float: left;
             }
 
             #section1b {
                 font-size: 30px;
-                width: 50%;
+                width: 45%;
                 height: 100%;
                 float: right;
                 text-align: right;
@@ -354,8 +354,8 @@
         <main>
             <section id="section1" class="titlefont">
                 <div id="section1a">
-                    <div id="developer_name">HENRY<br>SKRTICH</div>
-                    <div id="developer_title">DEVOPS ENGINEER</div>
+                    <div id="developer_name">HENRY SKRTICH</div>
+                    <div id="developer_title">INFRASTRUCTURE<br>ENGINEER</div>
                 </div>
                 <div id="section1b" style="position:relative">
                     <div>
@@ -383,7 +383,7 @@
                         </div>
                         <div class="clear desc">
                             Revamped infrastructure as code using Terraform, Atlantis, & github.
-                            Managed over 20 in house terraform modules and 6000+ aws resources
+                            Managed over 20 in house terraform modules and 9700+ aws resources
                             across 20 accounts while configuring security first architecture.
                             The resident terraform guru.
                         </div>
@@ -521,27 +521,27 @@
             <section id="section3">
                 <div class="section_title titlefont">Skills</div>
                 <div class="section_description" style="text-align-last: justify;">
+                    <span class="font1">Linux</span>
                     <span class="font3">Terraform</span>
-                    <span class="font2">AWS</span>
-                    <span class="font2">API</span>
                     <span class="font2">GCP</span>
+                    <span class="font2">API</span>
+                    <span class="font3">AWS</span>
+                    <span class="font2">VPC</span>
                     <span class="font2">EC2</span>
                     <span class="font2">Docker</span>
-                    <span class="font1">Kanban</span>
                     <span class="font3">Ansible</span>
                     <span class="font1">Apache</span>
-                    <span class="font1">PostgreSQL</span>
                     <span class="font3">Agile</span>
-                    <span class="font2">Python 3</span>
-                    <span class="font3">HTML</span>
+                    <span class="font1">PostgreSQL</span>
+                    <span class="font3">Python 3</span>
+                    <span class="font2">HTML</span>
                     <span class="font1">Git</span>
                     <span class="font3">MySQL</span>
                     <span class="font1">Scrum</span>
-                    <span class="font3">LAMP</span>
-                    <span class="font1">Oracle</span>
-                    <span class="font2">Jenkins</span>
-                    <span class="font3">PHP</span>
-                    <span class="font1">Linux</span>
+                    <span class="font3">Datadog</span>
+                    <span class="font2">CircleCI</span>
+                    <span class="font1">kubernetes</span>
+                    <span class="font2">Helm</span>
                     <span class="font3">Github</span>
                     <span class="font2">Shell Script</span>
                     <span class="font3">RDS</span>
