--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
                             <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
-                            Revamped infrastructure as code using Terraform, Atlantis, & github.
-                            Managed over 20 in house terraform modules and 9700+ aws resources
-                            across 20 accounts while configuring security first architecture.
-                            The resident terraform guru.
+                            Revamped Infrastructure as Code practices using Terraform, Atlantis,
+                            and GitHub. Managed over 20 in-house Terraform modules and 9,700+
+                            AWS resources across 20 accounts, emphasizing security-first architecture.
+                            Became the go-to Terraform expert.
                         </div>
                     </div>
                     <div class="job">
@@ -398,9 +398,9 @@
                             <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
-                            Built out new applaction infrastructure in GCP using Terraform.
-                            Remediated security vulnerabilities from Laceworks. Helped
-                            transition infrastructure from AWS to GCP.
+                            Developed new application infrastructures in GCP using Terraform
+                            and played a key role in the migration from AWS to GCP. Addressed
+                            security vulnerabilities identified by Lacework.
                         </div>
                     </div>
                     <div class="job">
@@ -413,9 +413,9 @@
                             <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
-                                Managed corporate wide infrastructure on AWS.
-                                Rebuilt entire AWS infrastructure using Terraform and Ansible.
-                                Develop and implement disaster recovery procedures.
+                            Oversaw the company-wide AWS infrastructure.
+                            Rebuilt entire AWS infrastructure using Terraform and Ansible.
+                            Designed and executed disaster recovery strategies.
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -429,7 +429,7 @@
                             <div class="loc">Boulder, CO</div>
                         </div>
                         <div class="clear desc">
-                            Dockerized full SASS production system for use as on premise
+                            Dockerized the entire SaaS production system for use as on-premise
                             solution using Replicated.io and Docker Swarm.
                             Managed CI/CD system for multiple applications using Jenkins.
                         </div>
@@ -445,9 +445,10 @@
                             <div class="loc">Broomfield, CO</div>
                         </div>
                         <div class="clear desc">
-                            Developed and maintained REST API (api.returnpath.com) using Docker, Debian, PHP and
-                            Oracle. Migrated backend systems to use Kubernetes and Docker for modularized approach to
-                            system management. Deep trouble shooting of both front end and back end system.
+                            Developed and maintained REST API using Docker, Debian, PHP and
+                            Oracle. Transitioned backend systems to Kubernetes and Docker for
+                            a more modular management approach. Deep troubleshooting of
+                            both front-end and back-end system.
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -461,9 +462,8 @@
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
-                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server.
-                            Developed transition plan from SQL Server and ASP Classic to full
-                            LAMP stack (Linux, Apache, MySQL, PHP).
+                            Stabilized legacy ERP system built with classic web technologies.
+                            Developed transition plan to full LAMP stack (Linux, Apache, MySQL, PHP).
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -477,9 +477,9 @@
                             <div class="loc">Broomfield, CO</div>
                         </div>
                         <div class="clear desc">
-                            Developed and maintained front end systems used by fortune 500
-                            companies using Backbone.js and Angular.js for the front end
-                            and PHP, Oracle, and CentOS on the back.
+                            Developed and maintained front-end systems used by fortune 500
+                            companies using Backbone.js and Angular.js for the front-end
+                            and PHP, Oracle, and CentOS on the back-end.
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -540,9 +540,9 @@
                     <span class="font1">Scrum</span>
                     <span class="font3">Datadog</span>
                     <span class="font2">CircleCI</span>
-                    <span class="font1">kubernetes</span>
+                    <span class="font1">Kubernetes</span>
                     <span class="font2">Helm</span>
-                    <span class="font3">Github</span>
+                    <span class="font3">GitHub</span>
                     <span class="font2">Shell Script</span>
                     <span class="font3">RDS</span>
                     <span class="font2">SQL</span>
