--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                             <div class="job_title">Sr. Site Reliability Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Aug, 2021 - Current</div>
+                            <div class="title">Aug, 2021 - Aug, 2024</div>
                             <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
